# pico-MPU9250

./: .clang-format  CMakeLists.txt  MPU9250.cc  MPU9250.h  README.md  ak8963_regs.txt  mpu9250_regs.txt  regs.py
examples/: README.md
examples/AHRS/: AHRS_fusion.h  CMakeLists.txt  Madgwick.cc  Madgwick.h  Mahony.cc  Mahony.h  README.md  main.cc
examples/calibration/: CMakeLists.txt  README.md  main.cc
examples/raw/: CMakeLists.txt  main.cc
